# MobileHaskellProjectTemplate

./: README.md  Steps.org  notes.org  questions_answers.org  readme.org  tasks.org
ChristmasStoryLogs/: README.org
ChristmasStoryLogs/downloads/: .gitignore  dw.sh  get_patcher.sh  patch_and_uilib.sh  patch_mach.sh
CrossCompilationBlogTutorial/: NixShellStdenvNotes.org  RelevantLinks.org  darwin_x86_download_binaries.sh  darwin_x86_export_paths.sh  hello.sh  null.sh  null_builder.sh  shell.nix  steps.org  toolchain.nix
CrossCompilationBlogTutorial/iOSProject/: .gitignore
CrossCompilationBlogTutorial/iOSProject/app/: appApp.swift
CrossCompilationBlogTutorial/iOSProjectCabal/app/: ContentView.swift
CrossCompilationBlogTutorial/iOSProjectCabal/app.xcodeproj/: project.pbxproj
CrossCompilationBlogTutorial/iOSProjectCabal/hs/: .gitignore  Lib.hs  compile.sh  hs.cabal
CrossCompilationBlogTutorial/iOSProjectCabal/hs/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
CrossCompilationBlogTutorial/iOSProjectCabal/hs/dist-newstyle/packagedb/ghc-8.10.4/: hs-0.1.0.0-inplace.conf  package.cache
CrossCompilationBlogTutorial/iOSProjectCabal/hs/stubs/: Lib_stub.h
CrossCompilationBlogTutorial/iOSProjectTH/: .gitignore  darwin_compile_hs.sh  get_ghc.sh  get_ghc2.sh  steps.org
CrossCompilationBlogTutorial/iOSProjectTH/app.xcodeproj/: project.pbxproj
CrossCompilationBlogTutorial/nix/: sources.json
CrossCompilationBlogTutorial/nixScripts/: init_toolchain.sh  mobilehaskell_extract.sh
(+4 files in other folders)
