cabal-version:      2.4
name:               hs
version:            0.1.0.0

author:             ernestkz
maintainer:         ernestkuznecovs@gmail.com

library
    exposed-modules:  Lib

    build-depends:    base
                    , HTTP
                      
    -- hs-source-dirs:   lib
    default-language: Haskell2010

    install-includes: stubs/Lib_stub.h
    -- let's put the stubs somewhere predictable
    ghc-options:      -stubdir stubs -staticlib

